--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,15 @@
 /resources/js/actions
 /resources/js/routes
 /resources/js/wayfinder
+/tests/Browser/console
+/tests/Browser/screenshots
+/tests/Browser/source
 /vendor
 .DS_Store
 .env
 .env.backup
 .env.production
+.env.dusk.local
 .phpactor.json
 .phpunit.result.cache
 Homestead.json
